--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Arctic Fox
-email: 
+title: Michelle Halevi
+email: michelle@michellehalevi.com
 description: > # this means to ignore newlines until "baseurl:"
   Jekyll Theme Demo
-baseurl: "/arctic-fox-theme" # the subpath of your site, e.g. /blog/
-url: "http://diezcami.github.io" # the base hostname & protocol for your site
-twitter_username: username
+baseurl: "/michellehalevi.github.io" # the subpath of your site, e.g. /blog/
+url: "http://michellehalevi.github.io" # the base hostname & protocol for your site
+twitter_username: michfaace
 github_username: username
 
 # Build settings
